--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           </div>
         </div>
       </div>
-      <div class="attribution">
+      <!-- <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Your Name Here</a>.
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
